--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ h2 {
   border-style: none;
 }
 
+
 /* Treehouse Styling */
 ul {
   list-style-type: none;
@@ -170,4 +171,19 @@ input {
     margin: 10px;
     width: 100px;
   }
+}
+
+@keyframes loading-spinner {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.fa-spinner {
+  font-size: 6em;
+  animation-name: loading-spinner;
+  animation-duration: 1.25s;
+  animation-iteration-count:infinite;
 }
