--- a/src/index.css
+++ b/src/index.css
@@ -51,8 +51,12 @@ h2 {
   color: rgb(255,255,255);
   background-color: #438bbd;
   border-style: none;
+  cursor: pointer;
 }
-
+.search-text {
+  font-size: 1.25em;
+  color: white;
+}
 
 /* Treehouse Styling */
 ul {
